--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Brad Traversy",
   "license": "MIT",
   "dependencies": {
+    "@fancyapps/fancybox": "^3.5.7",
     "bootstrap": "4.0.0-beta",
     "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
